<resources>
    <string name="app_name">TriviaApplication</string>
    <string name="trivia">Trivia</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="counter_question">0 out of 100</string>
    <string name="question">This is where our question will be</string>
    <string name="correct_answer">Correct</string>
    <string name="wrong_answer">Wrong</string>
    <string name="no_text">No text yet</string>
    <string name="your_score">Score</string>
</resources>